objects/Wage__c.object
<CustomObject>
    <fields>
        <fullName>EmploymentPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The employment period associated with this wage</description>
        <inlineHelpText>The employment period associated with this wage</inlineHelpText>
        <label>Employment Period</label>
        <referenceTo>Employment__c</referenceTo>
        <relationshipLabel>Wages</relationshipLabel>
        <relationshipName>Wages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>Indicates when the wages for this employment period ended</description>
        <inlineHelpText>Indicates when the wages for this employment period ended</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FullNameFormula__c</fullName>
        <formula>Trim(Left(EmploymentPeriod__r.Employee__r.FullNameFormula__c,31))&amp;&apos;_&apos;&amp; Trim(Left(EmploymentPeriod__r.Entity__r.Name, 30)) &amp; &apos;_&apos; &amp; TEXT(MONTH(StartDate__c)) + &quot;/&quot; + TEXT(DAY(StartDate__c)) + &quot;/&quot; + RIGHT(TEXT(YEAR(StartDate__c)),2) &amp;&apos;_&apos;&amp;
TEXT(MONTH(EndDate__c)) + &quot;/&quot; +TEXT(DAY(EndDate__c)) + &quot;/&quot; + RIGHT(TEXT(YEAR(EndDate__c)),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HoursSummary__c</fullName>
        <label>Hours Summary</label>
        <summarizedField>Hour__c.HourAmount__c</summarizedField>
        <summaryForeignKey>Hour__c.Wage__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IE2WageID__c</fullName>
        <description>The id from tblEmployeeW2Wages</description>
        <externalId>true</externalId>
        <inlineHelpText>The id from tblEmployeeW2Wages</inlineHelpText>
        <label>IE2WageID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Indicates when the wages for this employment period started</description>
        <inlineHelpText>Indicates when the wages for this employment period started</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WageAmount__c</fullName>
        <description>Indicates the wages earned between the start and end dates</description>
        <inlineHelpText>Indicates the wages earned between the start and end dates</inlineHelpText>
        <label>Wage Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WageEID__c</fullName>
        <description>The Enterprise ID for this Wage record.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Wage record.</inlineHelpText>
        <label>Wage EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Wage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Wage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Hire_date_not_greater_than_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(EmploymentPeriod__r.StartDate__c &gt; StartDate__c)</errorConditionFormula>
        <errorMessage>Employment Hire date can not be greater than start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_date_Validation</fullName>
        <active>true</active>
        <description>Employment Period Start date should be less than the End date.</description>
        <errorConditionFormula>AND( EndDate__c &lt; StartDate__c)</errorConditionFormula>
        <errorMessage>Employment Period Start date should be less than the End date.</errorMessage>
    </validationRules>
</CustomObject>